syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package test_hello_service;

option go_package = ".;test_hello_service";

service TestService {
	rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
	string name = 1; 
}

message HelloReply {
	string message = 1;
}